# haskell-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  haskell_compiler.sln  pr  pr.bison
.github/workflows/: build.yml  c-cpp.yml
flex/: CMakeLists.txt  flex.vcxproj  flex.vcxproj.filters  haskell.flex  haskell.flex.cpp  main.cpp
flex/code_examples/: sample.hs
flex/include/: FlexUtils.h
flex/resources/: haskell.flex
flex/resources/code_examples/: layout_test.hs  sample.hs  seconds_sample.hs
flex/src/: CMakeLists.txt  FlexUtils.cpp  haskell.flex.cpp  main.cpp
flex_bison/include/: BisonUtils.h  BisonUtils.hpp  FlexUtils.h  Iterator.hpp  JsonBuild.hpp  LayoutBuild.hpp  LexerError.hpp  Token.hpp  VectorGenerator.hpp
flex_bison/resources/: haskell.flex  hslexer.flex  hsparser.y  parser.y
flex_bison/src/: FlexUtils.cpp  LayoutBuild.cpp  haskell.flex.cpp  main.cpp
flex_bison/src/layout/: LayoutBuilder.cpp  States.cpp
flex_bison/tests/: test_all.py  tools.py
haskell_compiler/: haskell_compiler.cpp  haskell_compiler.vcxproj  haskell_compiler.vcxproj.filters
parser/include/: BisonUtils.h  JsonBuild.hpp  LayoutBuild.hpp  parser.h
parser/resources/: bison.y  hslexer.flex  hsparser.y  parser.y
parser/src/: main.cpp
parser/src/layout/: LayoutBuilder.cpp  StackStateMachine.cpp
parser/tests/: tools.py
program/haskell/prelude/: List.java  ListNode.java
semantic/: .gitignore  mix.exs  tree.py
semantic/lib/: compiler.ex  parser_bridge.ex  semantic.ex  transformers.ex  type_validation.ex
semantic/lib/generators/: const_pool.ex  gen_bytecode.ex  gen_class.ex  gen_code.ex  gen_instr.ex  gen_method.ex  instruction.ex  prelude.ex
semantic/test/: semantic_test.exs
