cmake_minimum_required(VERSION 3.25)

project(haskell_compiler VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/df1544bcee0c7ce35cd5ea0b3eb8cc81855a4140.zip
  DOWNLOAD_EXTRACT_TIMESTAMP TRUE 
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_subdirectory(flex)
target_include_directories(flex PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/parser/include)